Fix mobile overflow issue

--- a/src/app.scss
+++ b/src/app.scss
@@ -19,6 +19,7 @@ $font-path: '/fonts/Teko/Teko';
 }
 
 html {
+  overflow-x: hidden;
   background: #000;
   font-size: 100%;
   font-size: clamp(100%, 4vw, 200%);
